Refactor build script. (#528)